--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "axios": "^1.2.6"
+    "axios": "^1.2.6",
+    "react-hook-form": "^7.42.1"
   },
   "scripts": {
     "start": "react-scripts start",
